# Django-Oauth-Mail

./: LICENSE  README.rst  setup.cfg
oauth_mail/: apps.py
oauth_mail/mail/api/: microsoft.py
oauth_mail/security/: azure.py  utils.py
