[metadata]
name = django_oauth_mail
version = 0.01
author = Kayode
author_email = oluwakayode.agboola@yahoo.com
description = Django Project for Sending Mail using OAuth Authentication
long_description = file:README.rst
license = MIT
classifiers = 
    Environment :: Web Environment
    Framework :: Django
    Intended Audienece :: Developers
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Python Language :: Python :: 3.12

[options]
include_package_data = true
packages = find:
python_requires = >=3.0
install_requires = 
    Django >= 4.2.7
    msal >= 1.25.0
    requests >= 2.31.0